# nvim-read-mcp

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: release.yml  testing.yml
lua/nvim_context_mcp/: binary.lua  init.lua
plugins/nvim-context-mcp/.codex-plugin/: plugin.json
src/: main.rs  mcp.rs  nvim.rs  protocol.rs  registry.rs
