[package]
name = "nvim-context-mcp"
version = "0.1.0"
edition = "2024"
description = "Context MCP bridge for live Neovim visible context."
license = "MIT"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
